# accessible-attractions

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  manage.py  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: test_on_push.yaml
config/: .env.example
config_templates/: accessible-attractions-backend.service.in  env.template
production/: accessible-attractions-backend.socket
server/: asgi.py  manage.py  settings.py  urls.py  utilites.py  wsgi.py
server/apps/main/: admin.py  apps.py  models.py  service_layer.py  urls.py  views.py
server/apps/main/migrations/: 0001_initial.py  0002_remove_attraction_return_route_and_more.py  0002_route_address.py  0003_metrostation_station_type.py  0003_video.py  0004_attraction_audio_description.py  0005_photo.py  0006_aboutuspage_alter_attraction_audio_description_and_more.py  0007_attraction_routes_audio.py  0008_alter_attraction_audio_description_and_more.py
server/apps/main/models/: __init__.py  attraction_description.py  etc.py  routes_for_attractions.py
server/apps/main/services/: __init__.py  attraction_services.py  entities.py  exceptions.py  get_about_site_info.py  get_attraction_detail.py  get_attraction_previews.py  get_metro_stations_for_attraction.py  get_videos.py  helpers.py  search_attractions.py  service_layer.py
server/apps/main/static/css/: style.css
server/apps/main/templates/: base.html
server/apps/main/templates/main/: attractions.html  index.html
server/config/: asgi.py  settings.py
server/main/: views.py
server/main/static/css/: style.css
server/settings/: __init__.py
server/settings/components/: __init__.py  common.py  database.py  logging.py  ui.py
server/settings/environments/: __init__.py  development.py  production.py
server/static/css/: style.css
server/templates/: base.html  humans.txt
server/templates/main/: about_us.html  attraction_detail.html  attractions.html  index.html  routes.html  search_results.html  videos.html
src/: manage.py
src/config/: settings.py  urls.py  wsgi.py
src/main/: urls.py
tests/test_apps/test_main/test_views/: test_index_view.py  test_show_attraction_detail_view.py  test_show_attractions_list.py  test_show_help_view.py  test_show_routes_for_attraction_view.py  test_show_search_results_view.py
tests/test_server/: test_urls.py  test_utilites.py
tests/utilites/: moks.py
