[tool.poetry]
name = "accessible-attractions"
version = "0.1.0"
description = "website of the project <World of Travel and Opportunities>"
authors = ["Evgeniy Tulyakov <e.v.tulyakov1998@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
django-split-settings = "^1.1.0"
django-stubs-ext = "^0.3.1"
Markdown = "^3.3.6"
returns = "^0.19.0"
Pillow = "^9.1.0"
types-Markdown = "^3.3.13"
python-decouple = "^3.6"
bcrypt = "^3.2.0"
psycopg2 = "^2.9.3"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-import-order = "^0.18.1"
flake8-quotes = "^3.3.1"
flake8-variables-names = "^0.0.4"
mypy = "^0.931"
django-stubs = "^1.9.0"
pre-commit = "^2.17.0"
pytest = "^7.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
